--- a/problema2/src/app/formulario/formulario.component.html
+++ b/problema2/src/app/formulario/formulario.component.html
@@ -13,6 +13,10 @@
             <label for="mensaje">Mensaje</label>
             <textarea name="mensaje" id="mensaje" cols="30" rows="10" class="form-control" placeholder="Mensaje"></textarea>
         </div>
+        <div class="form-group row mt-2">
+            <label for="respuesta" class="col-md-1 col-form-label me-4">{{ numero1 }}+{{ numero2 }}=?</label>
+            <input type="number" id="Resultado" class="form-control" placeholder="Resultado">
+        </div>
         <br>
         <button type="submit" class="btn btn-primary">Enviar</button>
     </form>
